--- a/template_config.yml
+++ b/template_config.yml
@@ -39,7 +39,7 @@ plugin_name: galaxy_ng
 plugin_snake: galaxy_ng
 post_job_template: null
 pre_job_template:
-  name: galaxy
+  name: check_commit
   path: "galaxy_ng/.github/pre-job-template.yml.j2"
 publish_docs_to_pulpprojectdotorg: false
 pulp_scheme: http
