--- a/flake8.cfg
+++ b/flake8.cfg
@@ -6,6 +6,7 @@ exclude =
     ./dist/*
     ./galaxy_ng/tests/functional/*,
     */migrations/*,
+    .ci/scripts/validate_commit_message.py,
 
 ignore = BLK,W503,Q000,D,D100,D101,D102,D103,D104,D105,D106,D107,D200,D401,D402,E203
 max-line-length = 100
