--- a/template_config.yml
+++ b/template_config.yml
@@ -44,7 +44,9 @@ plugin_dash_short: galaxy
 plugin_default_branch: master
 plugin_name: galaxy_ng
 plugin_snake: galaxy_ng
-post_job_template: null
+post_job_template: 
+  name: update_manifest
+  path: "galaxy_ng/.github/post-job-template.yml.j2"
 pre_job_template:
   name: check_commit
   path: "galaxy_ng/.github/pre-job-template.yml.j2"
