--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,17 @@ exclude = '''
 )/
 '''
 
+[tool.darker]
+src = [
+    "galaxy_ng",
+]
+revision = "master"
+isort = true
+lint = [
+    "flake8 --config flake8.cfg",
+]
+log_level = "INFO"
+line_length = 100
 
 [tool.check-manifest]
 ignore = [
