Test docker dev env
No-Issue

--- a/.compose.env.example
+++ b/.compose.env.example
@@ -38,8 +38,10 @@ LOCK_REQUIREMENTS=1
 # where the script is executed in initContainers. 
 WAIT_FOR_MIGRATIONS=1
 
+## Pulp Settings ##
+
 # Add variables keycloak integration
-SOCIAL_AUTH_KEYCLOAK_PUBLIC_KEY="keycloak-public-key"
+PULP_SOCIAL_AUTH_KEYCLOAK_PUBLIC_KEY="keycloak-public-key"
 
 # Define if your keycloak environment is not running on localhost
-KEYCLOAK_HOST_LOOPBACK="192.168.1.14"
+PULP_KEYCLOAK_HOST_LOOPBACK="192.168.1.14"
