--- a/dev/standalone/galaxy_ng.env
+++ b/dev/standalone/galaxy_ng.env
@@ -4,6 +4,7 @@ PULP_GALAXY_API_PATH_PREFIX=/api/automation-hub/
 PULP_GALAXY_AUTHENTICATION_CLASSES=['rest_framework.authentication.SessionAuthentication', 'rest_framework.authentication.TokenAuthentication', 'rest_framework.authentication.BasicAuthentication']
 PULP_GALAXY_DEPLOYMENT_MODE=standalone
 PULP_GALAXY_REQUIRE_CONTENT_APPROVAL=false
+PULP_GALAXY_REQUIRE_SIGNATURE_FOR_APPROVAL=false
 PULP_GALAXY_AUTO_SIGN_COLLECTIONS=true
 PULP_GALAXY_COLLECTION_SIGNING_SERVICE=ansible-default
 PULP_RH_ENTITLEMENT_REQUIRED=insights
@@ -24,3 +25,7 @@ PULP_TOKEN_SERVER=http://localhost:5001/token/
 PULP_TOKEN_SIGNATURE_ALGORITHM=ES256
 PULP_PUBLIC_KEY_PATH=/src/galaxy_ng/dev/common/container_auth_public_key.pem
 PULP_PRIVATE_KEY_PATH=/src/galaxy_ng/dev/common/container_auth_private_key.pem
+
+# Feature flags for dev environment
+PULP_GALAXY_FEATURE_FLAGS__collection_signing_api=true
+PULP_GALAXY_FEATURE_FLAGS__collection_signature_upload=true
