--- a/dev/insights/galaxy_ng.env
+++ b/dev/insights/galaxy_ng.env
@@ -7,3 +7,5 @@ PULP_RH_ENTITLEMENT_REQUIRED=insights
 
 PULP_ANSIBLE_API_HOSTNAME=http://localhost:5001
 PULP_ANSIBLE_CONTENT_HOSTNAME=http://localhost:24816/api/automation-hub/v3/artifacts/collections
+
+PULP_GALAXY_REQUIRE_SIGNATURE_FOR_APPROVAL=true
