Add GALAXY_LDAP_MIRROR_ONLY_EXISTING_GROUPS setting
Issue: AAH-2112

--- a/profiles/ldap/pulp_config.env
+++ b/profiles/ldap/pulp_config.env
@@ -17,14 +17,13 @@ PULP_AUTH_LDAP_USER_ATTR_MAP__first_name=givenName
 PULP_AUTH_LDAP_USER_ATTR_MAP__last_name=sn
 PULP_AUTH_LDAP_USER_ATTR_MAP__email=mail
 
-PULP_AUTH_LDAP_MIRROR_GROUPS=false
-#PULP_AUTH_LDAP_MIRROR_GROUPS_EXCEPT=['system:partner-engineers']
-#PULP_AUTH_LDAP_USER_FLAGS_BY_GROUP__is_staff="cn=ship_crew,ou=people,dc=planetexpress,dc=com"
-#PULP_AUTH_LDAP_USER_FLAGS_BY_GROUP__is_superuser="cn=admin_staff,ou=people,dc=planetexpress,dc=com"
-PULP_AUTH_LDAP_FIND_GROUP_PERMS=true
+PULP_AUTH_LDAP_MIRROR_GROUPS=true
+PULP_AUTH_LDAP_USER_FLAGS_BY_GROUP__is_staff="cn=ship_crew,ou=people,dc=planetexpress,dc=com"
+PULP_AUTH_LDAP_USER_FLAGS_BY_GROUP__is_superuser="cn=admin_staff,ou=people,dc=planetexpress,dc=com"
 
 # optional
 PULP_GALAXY_LDAP_LOGGING=true
 # PULP_AUTH_LDAP_START_TLS=true
 # PULP_GALAXY_LDAP_SELF_SIGNED_CERT=true
 # PULP_AUTH_LDAP_CACHE_TIMEOUT=3600
+# PULP_GALAXY_LDAP_MIRROR_ONLY_EXISTING_GROUPS = True
