Add tests and docs
Issue: AAH-2112

--- a/dev/standalone-ldap/galaxy_ng.env
+++ b/dev/standalone-ldap/galaxy_ng.env
@@ -32,15 +32,19 @@ PULP_AUTH_LDAP_USER_SEARCH_SCOPE="SUBTREE"
 PULP_AUTH_LDAP_USER_SEARCH_FILTER="(uid=%(user)s)"
 PULP_AUTH_LDAP_GROUP_SEARCH_BASE_DN="ou=people,dc=planetexpress,dc=com"
 PULP_AUTH_LDAP_GROUP_SEARCH_SCOPE="SUBTREE"
-PULP_AUTH_LDAP_GROUP_SEARCH_FILTER = "(objectClass=Group)"
+PULP_AUTH_LDAP_GROUP_SEARCH_FILTER="(objectClass=Group)"
 PULP_AUTH_LDAP_GROUP_TYPE_CLASS="django_auth_ldap.config:GroupOfNamesType"
 PULP_AUTH_LDAP_GROUP_TYPE_PARAMS={name_attr="cn"}
 
 # User attribute settings
-PULP_AUTH_LDAP_ALWAYS_UPDATE_USER =true
+PULP_AUTH_LDAP_ALWAYS_UPDATE_USER=true
 PULP_AUTH_LDAP_USER_ATTR_MAP={first_name="givenName", last_name="sn", email="mail"}
-PULP_AUTH_LDAP_MIRROR_GROUPS=true
-PULP_AUTH_LDAP_MIRROR_GROUPS_EXCEPT=['system:partner-engineers']
+
+## The following 3 settings are mutually exclusive
+# PULP_AUTH_LDAP_MIRROR_GROUPS=true
+# PULP_AUTH_LDAP_MIRROR_GROUPS_EXCEPT=['system:partner-engineers']
+PULP_GALAXY_LDAP_MIRROR_ONLY_EXISTING_GROUPS=true
+
 PULP_AUTH_LDAP_USER_FLAGS_BY_GROUP__is_staff="cn=ship_crew,ou=people,dc=planetexpress,dc=com"
 PULP_AUTH_LDAP_USER_FLAGS_BY_GROUP__is_superuser="cn=admin_staff,ou=people,dc=planetexpress,dc=com"
 
