Temporarily unpin dab in insights requirements.
No-Issue

Signed-off-by: James Tanner <tanner.jc@gmail.com>

--- a/requirements/requirements.insights.txt
+++ b/requirements/requirements.insights.txt
@@ -121,7 +121,7 @@ django==4.2.14
     #   insights-analytics-collector
     #   pulpcore
     #   social-auth-app-django
-django-ansible-base[jwt-consumer] @ git+https://github.com/ansible/django-ansible-base@2024.8.1
+django-ansible-base[jwt-consumer] @ git+https://github.com/ansible/django-ansible-base@devel
     # via galaxy-ng (setup.py)
 django-auth-ldap==4.0.0
     # via galaxy-ng (setup.py)
